force-app/main/default/objects/Custom_Query__mdt/Custom_Query__mdt.object-meta.xml
<CustomObject>
    <description>Use this custom metadata to create queries that are in use in Apex classes.</description>
    <label>Custom Query</label>
    <pluralLabel>Custom Queries</pluralLabel>
</CustomObject>