force-app/main/default/objects/Custom_Query__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <description>Use this field to order the different parts of the query</description>
    <inlineHelpText>Use this field to order the different parts of the query. use 01,02 etc for future changes.</inlineHelpText>
    <label>Order By</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>