force-app/main/default/objects/Custom_Query__mdt/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>The process name where this query is used at.</description>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>