force-app/main/default/objects/Custom_Query__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The query or a part of it.</description>
    <inlineHelpText>The query or a part of it.</inlineHelpText>
    <label>Query</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>