force-app/main/default/objects/Custom_Query__mdt/listViews/all_with_better_view.listView-meta.xml
<ListView>
    <fullName>all_with_better_view</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order_By__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>all with better view</label>
</ListView>