force-app/main/default/objects/Custom_Query__mdt/listViews/Deletion_Queries.listView-meta.xml
<ListView>
    <fullName>Deletion_Queries</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order_By__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Query__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>delete</value>
    </filters>
    <label>Deletion Queries</label>
    <language>en_US</language>
</ListView>